--- a/index.qmd
+++ b/index.qmd
@@ -14,3 +14,4 @@ This site will help you navigate different homework assignments to perform the n
 Welcome to class!
 
 Dr. Jacob C. Cooper, BHS 321
+Dr. Melissa Wuellner, BHS 345
