--- a/anova2.qmd
+++ b/anova2.qmd
@@ -16,7 +16,7 @@ Don't forget to load your required packages - some we have used before, like `ag
 -   `tidyverse`: one we are already familiar with; a wrapper for installing `ggplot2`, `dplyr`, `tidyr`, `readr`, `purrr`, `tibble`, `stringr`, and `forcats`.
 -   `multcomp`: more in depth and better **MULT**iple **COMP**arisons via linear models and related models.
 -   `nlme`: a package for fitting Gaussian and **n**on-**l**inear **m**ixed-**e**ffect models.
-- `PMCMRplus`: a math package with post-hoc tests for Friedman's test
+-   `PMCMRplus`: a math package with post-hoc tests for Friedman's test
 
 ```{r, message = F}
 library(agricolae)
@@ -60,7 +60,7 @@ Explanatory_3 <- c(11.2, 10.1, 11.9)
 data_expanded <- cbind(Blocking_Variable,
                        Explanatory_1,
                        Explanatory_2,
-                       Explanatory_3) %>% 
+                       Explanatory_3) |> 
   as.data.frame() # create data frame
 
 data_expanded
@@ -72,7 +72,7 @@ data_expanded
 # expand to "long" format
 # if not done earlier, convert to data frame
 
-data <- data_expanded %>%
+data <- data_expanded |>
   # !by column for aggregating
   # names_to = what to name column aggregation
   # values_to = what the measurements should be called
@@ -111,8 +111,8 @@ As we can see above, each pairwise comparison is given a $p$ value for the level
 # change Explanatory_Variables to your data
 Treatments <- unique(data$Explanatory_Variables)
 
-sig_labels <- Treatments %>% 
-  as.data.frame() %>% 
+sig_labels <- Treatments |> 
+  as.data.frame() |> 
   mutate(Significance = rep(NA, length(Treatments)))
 
 # Change Explanatory_Variables to your data
@@ -205,8 +205,8 @@ Individuals <- c(paste0("Individual"," ",1:3))
 data <- cbind(Individuals, 
                    Visit_1,
                    Visit_2,
-                   Visit_3) %>%
-  as.data.frame() %>% 
+                   Visit_3) |>
+  as.data.frame() |> 
   pivot_longer(!Individuals,
                names_to = "Visits",
                values_to = "Measurements")
@@ -249,11 +249,11 @@ anova(lme_data)
 As we can see above, we can get the ANOVA results from this linear mixed-effects model fit to the dataset. Now, we need to know post-hoc which sets are different:
 
 ```{r}
-lme_data %>%
+lme_data |>
   # "general linear hypothesis"
   # define a comparison to make
   # can add corrections like test = adjusted (type = "bonferroni")
-  glht(linfct = mcp(Visits = "Tukey")) %>%
+  glht(linfct = mcp(Visits = "Tukey")) |>
   # return a summary of the above
   summary()
 ```
@@ -266,7 +266,7 @@ We can see that every visit is different.
 sig_levels_repeated <- matrix(data = c("Visit_1", "A",
                                        "Visit_2", "B",
                                        "Visit_3", "C"), 
-                              byrow = T, ncol = 2) %>% as.data.frame()
+                              byrow = T, ncol = 2) |> as.data.frame()
 
 # make labels match!
 colnames(sig_levels_repeated) <- c("Visits", "Significance")
@@ -356,9 +356,9 @@ data_expanded <- rbind(data_expanded,
                        data_expanded3)
 
 # expand to "long" format
-data <- data_expanded %>%
+data <- data_expanded |>
   # convert to data frame
-  as.data.frame() %>%
+  as.data.frame() |>
   # !by column for aggregating
   # names_to = what to name column aggregation
   # values_to = what the measurements should be called
@@ -396,11 +396,11 @@ set.seed(8675309)
 ### CREATING DATA FOR EXAMPLE 
 
 # new set of foods - this time, ten of them
-Treatments <- c(paste("Treatment",1:10)) %>%
+Treatments <- c(paste("Treatment",1:10)) |>
   as.factor()
 
 # pre-created data frame of locations from earlier
-Blocking_Factor <- c(paste("Block", 1:10)) %>%
+Blocking_Factor <- c(paste("Block", 1:10)) |>
   as.factor()
 
 long_data <- crossing(Blocking_Factor, Treatments)
@@ -410,7 +410,7 @@ long_data$Measurements <- NA
 for(i in 1:length(unique(long_data$Treatments))){
   subset_rows <- which(long_data$Treatments==long_data$Treatments[i])
   long_data$Measurements[subset_rows] <- runif(n = length(subset_rows),
-                                               min = i-2, max = i+2) %>% 
+                                               min = i-2, max = i+2) |> 
     round(1)
 }
 
